# peek-core-docdb

./: publish.settings.sh  publish.sh  pyproject.toml  setup.py  sonar-project.properties
peek_core_docdb/: plugin_package.json
peek_core_docdb/_private/admin-app/: docDb.module.ts
peek_core_docdb/_private/both-app/: docdb-popup.module.ts
peek_core_docdb/_private/both-cfg/: docdb-cfg.component.ts  docdb-cfg.component.web.html
peek_core_docdb/_private/client/: ClientEntryHook.py
peek_core_docdb/_private/server/: LogicEntryHook.py  ServerEntryHook.py
peek_core_docdb/_private/storage/: DocDbDocument.py  DocDbDocumentTypeTuple.py  DocDbModelSet.py  DocDbPropertyTuple.py
peek_core_docdb/admin-doc/admin_tasks/: admin_tasks.rst
peek_core_docdb/plugin-module/: DocDbPopupService.ts  DocDbService.ts
peek_core_docdb/plugin-module/constants/: docdb.constants.ts
peek_plugin_docdb/: __init__.py  plugin_package.json  rename_plugin.sh
peek_plugin_docdb/_private/admin-app/: docDb.component.html  docDb.component.ts  docDb.module.ts
peek_plugin_docdb/_private/agent/: AgentEntryHook.py  AgentToServerRpcCallExample.py  RpcForServer.py
peek_plugin_docdb/_private/server/: DocDbApi.py  (+4 more)
peek_plugin_docdb/doc-admin/: admin_tasks.rst  index.rst  overview.rst
peek_plugin_docdb/plugin-module/: DocDbPopupService.ts  DocDbPropertyTuple.ts  DocDbService.ts  DocumentPropertyTuple.ts  DocumentTuple.ts  DocumentTypeTuple.ts  index.ts  package.json
peek_plugin_docdb/server/: DocDbApiABC.py
peek_plugin_docdb/tuples/: DoSomethingTuple.py  DocumentTuple.py  ImportDocumentTuple.py
(+141 files in other folders)
